# github-pr-review-mcp-server

./: .codecov.yml  .dockerignore  .env.example  .env.http  .env.ngrok  .env.ngrok.example  .env.oauth.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  HTTP_TESTING_GUIDE.md  HTTP_TRANSPORT.md  LICENSE  MCP_HTTP_CLIENT_GUIDE.md  MULTI_TENANT_TOKEN_ARCHITECTURE.md  Makefile  PYDANTIC_SETTINGS_MIGRATION_PLAN.md  README.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  UV_COMMANDS.md  cloudrun.yaml  conftest.py  debug_test.py  deploy-cloudrun.sh  docker-compose.yml  git_pr_resolver.py  github_api_constants.py  mcp_server.py  mkdocs.yml  pyproject.toml  requirements.txt  run-server.sh  setup-oauth.sh  test.md  test_acceptance_mcp.py  test_http_mcp.py  test_mcp_server.py
.claude/: settings.local.json
.claude/agents/: python-backend-engineer.md
.devcontainer/: .gitconfig  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  tests.yml
docs/: HTTP_DEPLOYMENT.md  HTTP_QUICKSTART.md  OAUTH_SELF_SERVICE.md  REMOTE_ARCHITECTURE.md  REMOTE_SSE_IMPLEMENTATION.md  changelog.md  index.md
docs/architecture/: overview.md
docs/assets/: demo.cast
docs/contributing/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: editor-integrations.md  http-transport.md  local-stdio.md  remote-uv-endpoint.md
docs/reference/: cli.md  environment.md  mcp-manifest.md  publishing.md  tools.md
docs/security/: index.md
prompts/: GITHUB_API_ROBUSTNESS.md  RALPH_TEST_PROMPT.md
specs/: PHASE2_ENTERPRISE_GITHUB_URLS.md  PYDANTIC_MODEL_INTEGRATION.md
src/mcp_github_pr_review/: __init__.py  auth.py  cli.py  config.py  git_pr_resolver.py  github_api_constants.py  http_server.py  mcp.json  mcp_transport.py  models.py  oauth.py  oauth_routes.py  rate_limiter.py  server.py  token_store.py
tests/: conftest.py  test_api_headers.py  test_cli.py  test_collapsed_details.py  test_config_edge_cases.py  test_config_helpers.py  test_coverage_gaps.py  test_enterprise_url_support.py  test_final_push.py  test_get_pr_info.py  test_git_pr_resolver.py  test_git_pr_resolver_graphql.py  test_graphql_error_handling.py  test_graphql_timeout.py  test_integration.py  test_mcp_server_deprecated.py  test_mcp_server_tools.py  test_mcp_transport.py  test_models.py  test_null_author.py  test_package_metadata.py  test_pagination_limits.py  test_performance.py  test_rate_limit_handling.py  test_rest_error_handling.py  test_rest_timeout.py  test_security.py  test_server_settings.py  test_status_fields.py  test_systematic_coverage.py
